java runtime: prefer HTTP/3 (JEP 517); Java 26 becomes the ship floor (M7/D-180) (#66)
Both HttpClients in the runtime prefer HTTP/3 with ALT_SVC discovery + transparent fallback. Java 26 is now the compile/ship floor (--release gates + pom moved 21->26). Verified on Corretto 26: javac --release 26 -Werror, behavioral fallback test, and mvn package -> Java-26 bytecode jars.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>